Extensions: Fix flaky RendererStartupHelperTest.ExtensionInIncognitoRenderer.

RendererStartupHelperTest.ExtensionInIncognitoRenderer was crashing on debug
builds occasionally because the incognito context it was using wasn't marked
live. This adds code to ExtensionsTest to initialize the incognito context. This
also necessiated modifying MockExtensionSystemFactory so that a separate
MockExtensionSystem was created for incognito (like in non-testing scenario).

BUG=795888

Change-Id: I2b3d7e4261862e036686648d064867cb154b2694
Reviewed-on: https://chromium-review.googlesource.com/882495
Reviewed-by: Istiaque Ahmed <lazyboy@chromium.org>
Commit-Queue: Karan Bhatia <karandeepb@chromium.org>
Cr-Commit-Position: refs/heads/master@{#531749}
Former-commit-id: 670f41ee66bffb1f611e8d331fd1e2c411d089d1